--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -2,8 +2,8 @@
 
 //font variables
 $mainFont: "Open Sans", "Segoe UI", Tahoma, sans-serif;
-$txt-primary: black;
-$light: 300;
-$normal: 400;
-$semibold: 500;
-$bold: 700;
+
+//color variables
+$purple: #521751;
+$white: #ffffff;
+$grey: #cccccc;
