further refactor, fixed issue regarding registration with dupe emails

--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -7,3 +7,6 @@ $mainFont: "Open Sans", "Segoe UI", Tahoma, sans-serif;
 $purple: #521751;
 $white: #ffffff;
 $grey: #cccccc;
+
+//padding
+$default_container_padding: 20 px;
